[tool.poetry]
name = "HomePage"
version = "0.2.6"
description = "A simple Flask app that allows you to download videos using youtube_dl at home."
authors = ["Yudhajit N <28938427+Sh3llcod3@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7.4"
Flask = "*"
youtube_dl = "*"
easyparse = "*"
gevent = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"
flake8-bandit = "*"
flake8-bugbear = "*"
flake8-import-order = "*"
flake8-string-format = "*"
flake8-tidy-imports = "*"
flake8-todo = "*"
setuptools = "*"
twine = "*"
pyinstaller = "*"
Cython = "*"
requests = "*"

[tool.poetry.scripts]
flaskapp = "homepage:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
