[tool.poetry]
name = "homepage"
version = "0.5.1"
description = "A simple flask webapp to download the audio track from almost any internet video."
authors = ["Sh3llcod3 <28938427+Sh3llcod3@users.noreply.github.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/Sh3llcod3/HomePage"
homepage = "https://github.com/Sh3llcod3/HomePage"

classifiers = [
  "Programming Language :: Python :: 3.9",
  "License :: OSI Approved :: MIT License",
  "Topic :: Multimedia :: Sound/Audio",
  "Framework :: Flask",
  "Environment :: Web Environment"
]

include = [
  "homepage/static/*",
  "homepage/templates/*",
  "homepage/install_packages.py"
]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "*"
youtube_dl = "*"
easyparse = "*"
gevent = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"
flake8-bandit = "*"
flake8-bugbear = "*"
flake8-import-order = "*"
flake8-string-format = "*"
flake8-tidy-imports = "*"
flake8-todo = "*"
setuptools = "*"
twine = "*"
requests = "*"
mypy = "*"

[tool.poetry.scripts]
homepage = "homepage:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
